# object-identify-android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/autogen/: netscenequeryimg.proto
app/protos/: basenetscenereq.proto  basenetsceneresp.proto  netscenechangenickname.proto  netscenegethotsearch.proto  netscenegettrainprogress.proto  netsceneregister.proto  netsceneuploadavatar.proto
app/src/androidTest/java/com/cxy/oi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: autobuffer.cc  autobuffer.h  c2java.cc  java2c.cc  native-lib.cpp  shortlink.cc  shortlink.h  task.h  thread.cc  thread.h  unix_socket.h  util.cc  util.h
app/src/main/cpp/network/: CMakeLists.txt  autobuffer.cc  autobuffer.h  c2java.cc  c2java.h  java2c.cc  shortlink.cc  shortlink.h  shotlinkmanager.cc  shotlinkmanager.h  strutil.h  task.h  thread.cc  thread.h  unix_socket.h  util.cc
app/src/main/cpp/network/http/: firstline.cc  firstline.h  headerfield.cc  headerfield.h  httprequest.cc  httprequest.h  httpresponse.cc  httpresponse.h  requestline.cc  requestline.h
app/src/main/cpp/network/jni/: c2java.cc  c2java.h  java2c.cc  scopejenv.cc  scopejenv.h  varcache.cc  varcache.h
app/src/main/cpp/network/socket/: blocksocket.cc  blocksocket.h  socketpoll.cc  socketpoll.h  unix_socket.cc  unix_socket.h
app/src/main/cpp/network/time/: timeutil.cc  timeutil.h
app/src/main/cpp/network/utils/: autobuffer.cc  autobuffer.h  log.h  singleton.h  threadpool.cc  threadpool.h  timeutil.cc  timeutil.h
app/src/main/java/com/cxy/oi/app/: AppForegroundDelegate.java  IAppForegroundListener.java  OIApplicationContext.java  OIHandler.java  TestEvent.java
app/src/main/java/com/cxy/oi/autogen/: BaseNetSceneReq.java  BaseNetSceneReqOrBuilder.java  BaseNetSceneReqProto.java  BaseNetSceneResp.java  BaseNetSceneRespOrBuilder.java  BaseNetSceneRespProto.java  NetSceneChangeNicknameProto.java  NetSceneChangeNicknameReq.java  NetSceneChangeNicknameReqOrBuilder.java  NetSceneChangeNicknameResp.java  NetSceneChangeNicknameRespOrBuilder.java  NetSceneGetHotSearchProto.java  NetSceneGetHotSearchReq.java  NetSceneGetHotSearchReqOrBuilder.java  NetSceneGetHotSearchResp.java  NetSceneGetHotSearchRespOrBuilder.java  NetSceneGetTrainProgressProto.java  NetSceneGetTrainProgressReq.java  NetSceneGetTrainProgressReqOrBuilder.java  (+18 more)
app/src/main/res/anim/: rotate.xml  shake_thumb_anim.xml
app/src/main/res/color/: text_color_selector_white.xml
app/src/main/res/drawable/: btn_solid_green.xml  copyright_bg.xml  hotsearch_item_bg.xml  thumb_checkbox_disable.xml  thumb_checkbox_enable.xml  thumb_checkbox_selector.xml
app/src/main/res/layout/: gallery_preview.xml  gallery_preview_item.xml  hotsearch_item.xml  item_detail.xml  main.xml  pager_index.xml  pager_mine.xml  search_history_item.xml  set_nickname.xml  tabbar_item.xml  train_progress_chart.xml  upload_img_progress.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/cxy/oi/: ExampleUnitTest.java
(+117 files in other folders)
